chore: update java version (#83)
* chore: update java version

* chore: update docker base image

* chore: fix linters foundings

* chore: fix dockerfile